Add comprehensive Admin Dashboard for user management and revenue monitoring
✅ Complete admin panel with authentication
✅ User management (view/edit/delete users)
✅ Revenue monitoring (MRR, ARPU, conversion rates)
✅ Model & API configuration interface
✅ System health monitoring
✅ Database schema upgrade script
✅ Admin dashboard link in sidebar for admins
✅ Export/Import functionality
✅ Danger zone for maintenance operations

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,19 @@ anthropic==0.74.1
 google-generativeai==0.8.5
 groq==0.36.0
 
+# Payment Processing
+stripe==11.4.1
+
 # Utilities
 python-dotenv==1.2.1
+
+# Optional: Analytics & Monitoring
+# pandas==2.2.3  # For analytics dashboard
+# plotly==5.24.1  # For charts
+
+# Optional: Email Support
+# sendgrid==6.11.0  # For sending emails
+
+# Optional: Advanced Security
+# bcrypt==4.2.1  # For password hashing (using hashlib instead)
+# pyjwt==2.10.1  # For JWT tokens
